fix: prevent overflowing effect on mobile

--- a/src/sections/AtTwo/HowToWin/HowToWin.module.css
+++ b/src/sections/AtTwo/HowToWin/HowToWin.module.css
@@ -114,4 +114,9 @@
   .lists {
     margin-left: 16px;
   }
+  .link {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
 }
